--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Password Strength Analyzer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h2>Password Strength Analyzer</h2>
-        <input type="password" id="password" placeholder="Enter your password">
+        <div class="input-container">
+            <input type="password" id="password" placeholder="Enter your password">
+            <button id="togglePassword">Show</button>
+        </div>
         <div id="strength">Strength: <span id="strength-text">Weak</span></div>
     </div>
 
