--- a/index.html
+++ b/index.html
@@ -4,98 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Password Strength Analyzer - Check your password strength and get recommendations.">
+    <meta name="author" content="jalaliuzair">
+    <link rel="stylesheet" href="style.css">
     <title>Password Strength Analyzer</title>
-    <style>
-        /* General Styles */
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 50px;
-            background-color: #f4f4f4;
-        }
-
-        /* Container */
-        .container {
-            width: 300px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Input */
-        input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
-        /* Button */
-        #togglePassword {
-            margin: 5px 0;
-            cursor: pointer;
-            background: #007bff;
-            color: white;
-            border: none;
-            padding: 8px 15px;
-            border-radius: 5px;
-            font-size: 14px;
-        }
-
-        /* Strength Meter */
-        #strength {
-            margin-top: 10px;
-            font-weight: bold;
-        }
-        .weak { color: red; }
-        .medium { color: orange; }
-        .strong { color: green; }
-    </style>
 </head>
 <body>
     <div class="container">
-        <h2>Password Strength Analyzer</h2>
-        <!-- Password Input -->
-        <input type="password" id="password" placeholder="Enter your password">
-        <button id="togglePassword">Show</button>
+        <h1>Password Strength Analyzer</h1>
+        <p>Enter your password to check its strength and get recommendations.</p>
+        
+        <div class="input-container">
+            <input type="password" id="password" placeholder="Enter your password">
+            <button id="toggle-password">Show</button>
+        </div>
 
-        <!-- Strength Indicator -->
         <div id="strength">Strength: <span id="strength-text">Weak</span></div>
+
+        <div id="recommendations">
+            <h3>Recommendations:</h3>
+            <ul id="recommendation-list"></ul>
+        </div>
     </div>
 
-    <script>
-        const passwordInput = document.getElementById("password");
-        const toggleButton = document.getElementById("togglePassword");
-        const strengthText = document.getElementById("strength-text");
-
-        // Show/Hide Password Functionality
-        toggleButton.addEventListener("click", () => {
-            if (passwordInput.type === "password") {
-                passwordInput.type = "text";
-                toggleButton.textContent = "Hide";
-            } else {
-                passwordInput.type = "password";
-                toggleButton.textContent = "Show";
-            }
-        });
-
-        // Password Strength Checker
-        passwordInput.addEventListener("input", () => {
-            const password = passwordInput.value;
-            if (password.length < 6) {
-                strengthText.textContent = "Weak";
-                strengthText.className = "weak";
-            } else if (password.match(/[A-Z]/) && password.match(/[0-9]/) && password.length >= 8) {
-                strengthText.textContent = "Strong";
-                strengthText.className = "strong";
-            } else {
-                strengthText.textContent = "Medium";
-                strengthText.className = "medium";
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
