--- a/index.html
+++ b/index.html
@@ -9,42 +9,37 @@
 </head>
 <body>
     <div class="container">
-        <div class="analyzer-card">
+        <div class="card">
             <h1>Password Strength Analyzer</h1>
-            <div class="input-group">
-                <input type="password" id="password" placeholder="Enter your password">
-                <button id="togglePassword">Show</button>
-            </div>
-            <button onclick="analyzePassword()">Analyze</button>
+            <input type="password" id="password" placeholder="Enter your password">
+            <button onclick="togglePasswordVisibility()" id="togglePassword">Show</button>
+            <button onclick="checkPasswordStrength()">Check</button>
             <p id="strength">Strength: </p>
         </div>
     </div>
-
     <script>
-        const passwordInput = document.getElementById('password');
-        const togglePassword = document.getElementById('togglePassword');
-
-        togglePassword.addEventListener('click', () => {
-            if (passwordInput.type === 'password') {
-                passwordInput.type = 'text';
-                togglePassword.textContent = 'Hide';
+        function togglePasswordVisibility() {
+            const passwordField = document.getElementById('password');
+            const toggleButton = document.getElementById('togglePassword');
+            if (passwordField.type === 'password') {
+                passwordField.type = 'text';
+                toggleButton.textContent = 'Hide';
             } else {
-                passwordInput.type = 'password';
-                togglePassword.textContent = 'Show';
+                passwordField.type = 'password';
+                toggleButton.textContent = 'Show';
             }
-        });
+        }
 
-        function analyzePassword() {
-            const password = passwordInput.value;
-            const strengthText = document.getElementById('strength');
+        function checkPasswordStrength() {
+            const password = document.getElementById('password').value;
+            const strengthIndicator = document.getElementById('strength');
             let strength = 'Weak';
-
-            if (password.length > 8 && /[A-Z]/.test(password) && /\d/.test(password) && /[!@#$%^&*]/.test(password)) {
+            if (password.length > 8 && /[A-Z]/.test(password) && /[0-9]/.test(password) && /[^A-Za-z0-9]/.test(password)) {
                 strength = 'Strong';
-            } else if (password.length > 6) {
+            } else if (password.length > 6 && (/[A-Z]/.test(password) || /[0-9]/.test(password))) {
                 strength = 'Medium';
             }
-            strengthText.textContent = `Strength: ${strength}`;
+            strengthIndicator.textContent = 'Strength: ' + strength;
         }
     </script>
 </body>
